--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -82,7 +82,7 @@
         <tr><td>2</td><td>郑州</td><td>41</td><td>50</td></tr>
         <tr><td>3</td><td>杭州东</td><td>30</td><td>35</td></tr>
         <tr><td>4</td><td>北京南</td><td>30</td><td>31</td></tr>
-        <tr><td>5</td><td>兰州</td><td>26</td><td>30</td></tr>
+        <tr><td>5</td><td>兰州</td><td>27</td><td>31</td></tr>
         <tr><td>6</td><td>福州</td><td>25</td><td>31</td></tr>
         <tr><td>7</td><td>兰州西</td><td>24</td><td>28</td></tr>
         <tr><td>8</td><td>上海</td><td>22</td><td>23</td></tr>
@@ -108,17 +108,19 @@
       <p class="text-muted" lang="en">It's a simplified version. For detailed version you may refer to <a class="link" href="helpUpdatehist.html">this page</a>.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-05-27(v2.3.10)
+          <ul>
+            <li>毕业季，更新将暂缓。</li>
+            <li>新增车站：<var>贺胜桥东</var></li>
+            <li>车站总数达到500个。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-05-20(v2.3.9)
           <ul>
             <li>由于学业原因，更新将暂缓。</li>
             <li>新增车站：<var>霸州</var>、<var>滨海港</var>、<var>昌平</var>、<var>长春</var>、<var>长春西</var>、<var>常州</var>、<var>德惠</var>、<var>德州</var>、<var>阜宁</var>、<var>阜宁南</var>、<var>海安</var>、<var>蓟州北</var>、<var>建湖</var>、<var>龙嘉</var>、<var>马鞍山</var>、<var>蓬莱市</var>、<var>如东</var>、<var>射阳</var>、<var>四平</var>、<var>四平东</var>、<var>泰州</var>、<var>盐城</var>、<var>盐城大丰</var></li>
             <li>车站总数达到499个，机器数量1263台。</li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          2021-05-10(v2.3.8)
-          <ul>
-            <li>新增车站：<var>沧州西</var>、<var>东台</var>、<var>鄂州</var>、<var>阜阳西</var>、<var>十渡</var>、<var>苏州北</var></li>
           </ul>
         </li>
         <li class="list-group-item">
