--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -55,6 +55,14 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-05-27(v2.3.10)
+          <ul>
+            <li>毕业季，更新将暂缓。</li>
+            <li>新增车站：<var>贺胜桥东</var></li>
+            <li>车站总数达到500个。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-05-20(v2.3.9)
           <ul>
             <li>由于学业原因，更新将暂缓。</li>
