--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -32,8 +32,6 @@
     </ul>
   </nav>
   <div class="container head">
-    <p>推荐使用Mdict词典版本，查询更方便。Mdict官方网站：<a href="https://www.mdict.cn/wp/?lang=zh">www.mdict.cn/wp</a></p>
-    <p><a href="./tktMach202103292.mdx"><i class="fas fa-download"></i>下载词典 - 2021 年 03 月 29 日版本</a></p>
     <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="知识共享许可协议" style="border-width:0;" src="./img/ccbync.png" /></a><br />本作品采用<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">知识共享署名-非商业性使用 4.0 国际许可协议</a>进行许可。
   </div>
   <div class="container">
@@ -50,14 +48,21 @@
     <br/>
     <article class="container">
       <h3>版本迭代史</h3>
-      <h4 class="text-muted" lang="ja">Update log 更新日誌</h4>
+      <h4 class="text-muted" lang="ja">Update log 変更履歴</h4>
       <p>这是较为完整的更新日志。内容增加、版式微调等常规更新将不再被列出，敬请注意。</p>
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-06-06(v2.3.11)
+          <ul>
+            <li>毕业季，更新频率略有下调。</li>
+            <li>新增车站：<var>花山南</var>、<var>黄冈</var>、<var>咸宁</var></li>
+            <li>新的车票类型。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-05-27(v2.3.10)
           <ul>
-            <li>毕业季，更新将暂缓。</li>
             <li>新增车站：<var>贺胜桥东</var></li>
             <li>车站总数达到500个。</li>
           </ul>
@@ -65,7 +70,7 @@
         <li class="list-group-item">
           2021-05-20(v2.3.9)
           <ul>
-            <li>由于学业原因，更新将暂缓。</li>
+            <li>毕业季，更新频率略有下调。</li>
             <li>新增车站：<var>霸州</var>、<var>滨海港</var>、<var>昌平</var>、<var>长春</var>、<var>长春西</var>、<var>常州</var>、<var>德惠</var>、<var>德州</var>、<var>阜宁</var>、<var>阜宁南</var>、<var>海安</var>、<var>蓟州北</var>、<var>建湖</var>、<var>龙嘉</var>、<var>马鞍山</var>、<var>蓬莱市</var>、<var>如东</var>、<var>射阳</var>、<var>四平</var>、<var>四平东</var>、<var>泰州</var>、<var>盐城</var>、<var>盐城大丰</var></li>
             <li>车站总数达到499个，机器数量1263台。</li>
           </ul>
