--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -39,7 +39,7 @@
   </nav>
   <div class="container head">
     <p>推荐使用Mdict词典版本，查询更方便。Mdict官方网站：<a href="https://www.mdict.cn/wp/?lang=zh">www.mdict.cn/wp</a></p>
-    <p><a href="./tktMach202104262.mdx"><i class="fas fa-download"></i>下载词典 - 2021 年 04 月 26 日版本</a></p>
+    <p><a href="./tktMach202106062.mdx"><i class="fas fa-download"></i>下载词典 - 2021 年 06 月 06 日版本</a></p>
     <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="知识共享许可协议" style="border-width:0;" src="./img/ccbync.png" /></a><br />本作品采用<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">知识共享署名-非商业性使用 4.0 国际许可协议</a>进行许可。
   </div>
   <div class="container">
@@ -47,19 +47,6 @@
     <a href="https://kinarail.gitee.io/ticket_stat/tktmach_latest.html" class="promo">
       kinarail.gitee.io/ticket_stat/tktmach_latest.html
     </a>
-    <p></p>
-    <div class="container">
-      <h4>票机评价标准：</h4>
-      <ul class="list-group">
-        <li class="list-group-item list-group-item-danger">0分/极差：刚出票即有瑕疵，半年左右即模糊不清，并有缺失、白条等。</li>
-        <li class="list-group-item list-group-item-warning">1分/很差：一年左右即模糊不清，缺失、白条等。</li>
-        <li class="list-group-item list-group-item-warning">2分/略差：略有模糊，略有不整齐；或两年后褪色明显的。</li>
-        <li class="list-group-item list-group-item-info">3分/尚可：半年左右仍清晰可认，无白条。两年后应仍可明显辨认。</li>
-        <li class="list-group-item list-group-item-success">4分/佳：一年仍清晰锐利，无白条、缺失。</li>
-        <li class="list-group-item list-group-item-success">5分/佳：两年仍清晰锐利，无白条、缺失等。（特殊等级）</li>
-        <li class="list-group-item">红色软质车票由于其抗褪色特性，可以视情况加分。（系统自动完成）</li>
-        </ol>
-    </div>
     <p></p>
     票号前十位包含以下信息：
     <p>5位车站号+2位售票方式号+3位售票窗口号</p>
@@ -91,6 +78,18 @@
       </table>
     </div>
     <div class="container">
+      <h4>票机评价标准：</h4>
+      <ul class="list-group">
+        <li class="list-group-item list-group-item-danger">0分/极差：刚出票即有瑕疵，半年左右即模糊不清，并有缺失、白条等。</li>
+        <li class="list-group-item list-group-item-warning">1分/很差：一年左右即模糊不清，缺失、白条等。</li>
+        <li class="list-group-item list-group-item-warning">2分/略差：略有模糊，略有不整齐；或两年后褪色明显的。</li>
+        <li class="list-group-item list-group-item-info">3分/尚可：半年左右仍清晰可认，无白条。两年后应仍可明显辨认。</li>
+        <li class="list-group-item list-group-item-success">4分/佳：一年仍清晰锐利，无白条、缺失。</li>
+        <li class="list-group-item list-group-item-success">5分/佳：两年仍清晰锐利，无白条、缺失等。（特殊等级）</li>
+        <li class="list-group-item">红色软质车票由于其抗褪色特性，可以视情况加分。（系统自动完成）</li>
+        </ol>
+    </div>
+    <div class="container">
       <h3>常见票纸类型</h3>
       <article id="tktpaperdesc" class="container"></article>
     </div>
@@ -101,26 +100,26 @@
     </script>
     <article class="container">
       <h3>版本迭代史</h3>
-      <h4 class="text-muted" lang="ja">Update log 更新日誌</h4>
+      <h4 class="text-muted" lang="ja">Update log 変更履歴（最近）</h4>
       <p>内容增加、版式微调等常规更新将不再被列出，敬请注意。</p>
       <p class="text-muted" lang="en">Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <p>这是简略的更新日志。更详尽的信息可参考<a class="link" href="helpUpdatehist.html">专门页面</a></p>
       <p class="text-muted" lang="en">It's a simplified version. For detailed version you may refer to <a class="link" href="helpUpdatehist.html">this page</a>.</p>
+      <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.html">ページ</a>へ。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
-          2021-05-27(v2.3.10)
+          2021-06-06(v2.3.11)
           <ul>
-            <li>毕业季，更新将暂缓。</li>
-            <li>新增车站：<var>贺胜桥东</var></li>
-            <li>车站总数达到500个。</li>
+            <li>毕业季，更新频率略有下调。</li>
+            <li>新增车站：<var>花山南</var>、<var>黄冈</var>、<var>咸宁</var></li>
+            <li>新的车票类型。</li>
           </ul>
         </li>
         <li class="list-group-item">
-          2021-05-20(v2.3.9)
+          2021-05-27(v2.3.10)
           <ul>
-            <li>由于学业原因，更新将暂缓。</li>
-            <li>新增车站：<var>霸州</var>、<var>滨海港</var>、<var>昌平</var>、<var>长春</var>、<var>长春西</var>、<var>常州</var>、<var>德惠</var>、<var>德州</var>、<var>阜宁</var>、<var>阜宁南</var>、<var>海安</var>、<var>蓟州北</var>、<var>建湖</var>、<var>龙嘉</var>、<var>马鞍山</var>、<var>蓬莱市</var>、<var>如东</var>、<var>射阳</var>、<var>四平</var>、<var>四平东</var>、<var>泰州</var>、<var>盐城</var>、<var>盐城大丰</var></li>
-            <li>车站总数达到499个，机器数量1263台。</li>
+            <li>新增车站：<var>贺胜桥东</var></li>
+            <li>车站总数达到500个。</li>
           </ul>
         </li>
         <li class="list-group-item">
