--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -41,8 +41,8 @@
     </a>
   </div>
   <div class="container">
-    <h2>运转大数据 ｜ 版本迭代史</h2>
-    <h4 class="text-muted" lang="en">Yùnzhuǎn Dà-shùjù (Big Data for Train Travel in China, YZDSJ or BD4TTC) | About us</h4>
+    <h2>运转大数据</h2>
+    <h4 class="text-muted" lang="en">Yùnzhuǎn Dà-shùjù (Big Data for Train Travel in China, YZDSJ)</h4>
     <p><span>一个小小的个人网页，正在建设中……如有疑问，请联系管理员（前往<a href="tktAbout.html#plq">评论区</a>）。</span><br>
     <span class="text-muted" lang="en">A brunch of personal web pages, under construction... Any question please contact Kina or just <a href="tktAbout.html#plq">comment</a> us.</span></p>
     <br/>
@@ -53,6 +53,13 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-06-13(v2.3.12)
+          <ul>
+            <li>毕业季，更新频率略有下调。</li>
+            <li>新增车站：<var>扶余</var>、<var>公主岭</var>、<var>平房</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-06-06(v2.3.11)
           <ul>
             <li>毕业季，更新频率略有下调。</li>
