--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -54,7 +54,7 @@
   </div>
   <div class="container">
     <h2>运转大数据 ｜ 关于我们</h2>
-    <h4 class="text-muted" lang="en">Yùnzhuǎn Dà-shùjù (Big Data for Train Travel in China, YZDSJ or BD4TTC) | About us</h4>
+    <h4 class="text-muted" lang="en">Yùnzhuǎn Dà-shùjù (Big Data for Train Travel in China, YZDSJ) | About us</h4>
     <p><span>一个小小的个人网页，正在建设中……如有疑问，请联系管理员（前往<a href="#plq">评论区</a>）。</span><br>
     <span class="text-muted" lang="en">A brunch of personal web pages, under construction... Any question please contact Kina or just <a href="#plq">comment</a> us.</span></p>
     <!-- Person info - React -->
@@ -108,18 +108,18 @@
       <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.html">ページ</a>へ。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-06-13(v2.3.12)
+          <ul>
+            <li>毕业季，更新频率略有下调。</li>
+            <li>新增车站：<var>扶余</var>、<var>公主岭</var>、<var>平房</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-06-06(v2.3.11)
           <ul>
             <li>毕业季，更新频率略有下调。</li>
             <li>新增车站：<var>花山南</var>、<var>黄冈</var>、<var>咸宁</var></li>
             <li>新的车票类型。</li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          2021-05-27(v2.3.10)
-          <ul>
-            <li>新增车站：<var>贺胜桥东</var></li>
-            <li>车站总数达到500个。</li>
           </ul>
         </li>
         <li class="list-group-item">
