--- a/rail/tktGener.html
+++ b/rail/tktGener.html
@@ -12,7 +12,7 @@
   <script src="https://cdn.staticfile.org/twitter-bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
   <script src="./js/tkt_type.min.js"></script>
   <style>
-    body {padding-top: 4em;}img.ptimg{width:300px;max-width:100%;height:auto}span.s0lt1,span.s1lt1{color:red!important}span.s1lt2,span.s2lt1,span.s2lt2,span.s3lt1,span.s4lt2{color:#ff0!important}span.s4lt1,span.s5lt1{color:#3f3!important}span.s0lt2,span.s3lt2,span.s5lt2{color:transparent!important}
+    body {padding-top: 4em;}img.ptimg{width:300px;max-width:100%;height:auto}span.s0lt1,span.s1lt1{color:red!important}span.s1lt2,span.s2lt1,span.s2lt2,span.s3lt1,span.s4lt2{color:#ff0!important}span.s4lt1,span.s5lt1{color:#3f3!important}span.s0lt2,span.s3lt2,span.s5lt2{color:transparent!important}a.promo{word-break: break-all}
   </style>
 </head>
 
@@ -31,8 +31,9 @@
     </ul>
   </nav>
   <div class="container">
+    <p></p>
     项目网址：
-    <a href="https://kinarail.gitee.io/ticket_stat/tktmach_latest.html">
+    <a href="https://kinarail.gitee.io/ticket_stat/tktmach_latest.html" class="promo">
       https://kinarail.gitee.io/ticket_stat/tktmach_latest.html
     </a>
     <p></p>
