--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -53,6 +53,15 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-06-20(v2.3.13)(发布于2021-06-24)
+          <ul>
+            <li>毕业季，更新频率略有下调。</li>
+            <li>修改了部分标签的格式。</li>
+            <li>提前维护了台州西站的更名。</li>
+            <li>新增车站：<var>九台</var>、<var>临沂</var>、<var>莆田</var>、<var>中山北</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-06-13(v2.3.12)
           <ul>
             <li>毕业季，更新频率略有下调。</li>
