--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -68,13 +68,13 @@
         <tr><td>1</td><td>郑州东</td><td>46</td><td>58</td></tr>
         <tr><td>2</td><td>郑州</td><td>41</td><td>50</td></tr>
         <tr><td>3</td><td>杭州东</td><td>30</td><td>35</td></tr>
-        <tr><td>4</td><td>北京南</td><td>30</td><td>31</td></tr>
+        <tr><td>4</td><td>北京南</td><td>30</td><td>32</td></tr>
         <tr><td>5</td><td>兰州</td><td>27</td><td>31</td></tr>
-        <tr><td>6</td><td>福州</td><td>25</td><td>31</td></tr>
+        <tr><td>6</td><td>福州</td><td>26</td><td>32</td></tr>
         <tr><td>7</td><td>兰州西</td><td>24</td><td>28</td></tr>
         <tr><td>8</td><td>上海</td><td>22</td><td>23</td></tr>
         <tr><td>9</td><td>天津</td><td>21</td><td>28</td></tr>
-        <tr><td>10</td><td>北京西</td><td>19</td><td>25</td></tr>
+        <tr><td>10</td><td>北京西</td><td>19</td><td>26</td></tr>
       </table>
     </div>
     <div class="container">
@@ -108,18 +108,19 @@
       <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.html">ページ</a>へ。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-06-20(v2.3.13)(发布于2021-06-24)
+          <ul>
+            <li>毕业季，更新频率略有下调。</li>
+            <li>修改了部分标签的格式。</li>
+            <li>提前维护了台州西站的更名。</li>
+            <li>新增车站：<var>九台</var>、<var>临沂</var>、<var>莆田</var>、<var>中山北</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-06-13(v2.3.12)
           <ul>
             <li>毕业季，更新频率略有下调。</li>
             <li>新增车站：<var>扶余</var>、<var>公主岭</var>、<var>平房</var></li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          2021-06-06(v2.3.11)
-          <ul>
-            <li>毕业季，更新频率略有下调。</li>
-            <li>新增车站：<var>花山南</var>、<var>黄冈</var>、<var>咸宁</var></li>
-            <li>新的车票类型。</li>
           </ul>
         </li>
         <li class="list-group-item">
