--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -53,6 +53,13 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-07-01(v2.3.14) 百年生日快乐！
+          <ul>
+            <li>修改了部分标签的格式。</li>
+            <li>维护了部分车站更名。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-06-20(v2.3.13)(发布于2021-06-24)
           <ul>
             <li>毕业季，更新频率略有下调。</li>
