--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -65,13 +65,13 @@
       <h3>趋势榜</h3><h4 class="text-muted" lang="en">Trend List</h4>
       <table class="table">
         <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
-        <tr><td>1</td><td>郑州东</td><td>46</td><td>57</td></tr>
-        <tr><td>2</td><td>郑州</td><td>41</td><td>50</td></tr>
+        <tr><td>1</td><td>郑州东</td><td>46</td><td>59</td></tr>
+        <tr><td>2</td><td>郑州</td><td>41</td><td>53</td></tr>
         <tr><td>3</td><td>北京南</td><td>31</td><td>33</td></tr>
         <tr><td>4</td><td>杭州东</td><td>30</td><td>35</td></tr>
-        <tr><td>5</td><td>兰州</td><td>27</td><td>31</td></tr>
+        <tr><td>5</td><td>兰州</td><td>28</td><td>34</td></tr>
         <tr><td>6</td><td>福州</td><td>26</td><td>32</td></tr>
-        <tr><td>7</td><td>兰州西</td><td>24</td><td>28</td></tr>
+        <tr><td>7</td><td>兰州西</td><td>24</td><td>29</td></tr>
         <tr><td>8</td><td>上海</td><td>22</td><td>23</td></tr>
         <tr><td>9</td><td>天津</td><td>21</td><td>28</td></tr>
         <tr><td>10</td><td>北京西</td><td>19</td><td>26</td></tr>
@@ -108,6 +108,15 @@
       <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.html">ページ</a>へ。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-07-08(v3.0.0-alpha)
+          <ul>
+            <li>新增车站：<var>大连</var>、<var>合肥北城</var>、<var>林芝</var>、<var>水家湖</var>、<var>台州西</var>、<var>太仓</var>、<var>天祝</var>、<var>武威南</var>、<var>咸阳西</var>、<var>永登</var>，新增虚拟车站：<var>郑州客运段</var></li>
+            <li>新增车站联合体：<var>合福高速线(线路)</var>、<var>金温货线(线路)</var>、<var>金温线(线路)</var></li>
+            <li>勋章展示、车站客货运标志功能上线。</li>
+            <li>车补票试运行。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-07-01(v2.3.14) 百年生日快乐！
           <ul>
             <li>修改了部分标签的格式。</li>
