--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -53,6 +53,15 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-07-08(v3.0.0-alpha)
+          <ul>
+            <li>新增车站：<var>大连</var>、<var>合肥北城</var>、<var>林芝</var>、<var>水家湖</var>、<var>台州西</var>、<var>太仓</var>、<var>天祝</var>、<var>武威南</var>、<var>咸阳西</var>、<var>永登</var>，新增虚拟车站：<var>郑州客运段</var></li>
+            <li>新增车站联合体：<var>合福高速线(线路)</var>、<var>金温货线(线路)</var>、<var>金温线(线路)</var></li>
+            <li>勋章展示、车站客货运标志功能上线。</li>
+            <li>车补票试运行。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-07-01(v2.3.14) 百年生日快乐！
           <ul>
             <li>修改了部分标签的格式。</li>
