--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -67,7 +67,7 @@
         <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
         <tr><td>1</td><td>郑州东</td><td>46</td><td>59</td></tr>
         <tr><td>2</td><td>郑州</td><td>41</td><td>53</td></tr>
-        <tr><td>3</td><td>北京南</td><td>31</td><td>33</td></tr>
+        <tr><td>3</td><td>北京南</td><td>32</td><td>34</td></tr>
         <tr><td>4</td><td>杭州东</td><td>30</td><td>35</td></tr>
         <tr><td>5</td><td>兰州</td><td>28</td><td>34</td></tr>
         <tr><td>6</td><td>福州</td><td>26</td><td>32</td></tr>
@@ -108,28 +108,20 @@
       <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.html">ページ</a>へ。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-07-15(v3.0.0-alpha.1)
+          <ul>
+            <li>新增车站：<var>嘉善</var></li>
+            <li>增加对来源的标识。</li>
+            <li>样式更改为本地资源，便于保存。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-07-08(v3.0.0-alpha)
           <ul>
             <li>新增车站：<var>大连</var>、<var>合肥北城</var>、<var>林芝</var>、<var>水家湖</var>、<var>台州西</var>、<var>太仓</var>、<var>天祝</var>、<var>武威南</var>、<var>咸阳西</var>、<var>永登</var>，新增虚拟车站：<var>郑州客运段</var></li>
             <li>新增车站联合体：<var>合福高速线(线路)</var>、<var>金温货线(线路)</var>、<var>金温线(线路)</var></li>
             <li>勋章展示、车站客货运标志功能上线。</li>
             <li>车补票试运行。</li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          2021-07-01(v2.3.14) 百年生日快乐！
-          <ul>
-            <li>修改了部分标签的格式。</li>
-            <li>维护了部分车站更名。</li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          2021-06-20(v2.3.13)(发布于2021-06-24)
-          <ul>
-            <li>毕业季，更新频率略有下调。</li>
-            <li>修改了部分标签的格式。</li>
-            <li>提前维护了台州西站的更名。</li>
-            <li>新增车站：<var>九台</var>、<var>临沂</var>、<var>莆田</var>、<var>中山北</var></li>
           </ul>
         </li>
         <li class="list-group-item">
