--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -24,10 +24,13 @@
     <span class="navbar-text"> By Kina(木菜)</span>
     <ul class="navbar-nav">
       <li class="nav-item">
+        <a class="nav-link" href="./tktmach_latest.html">返回</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="./tktGener.html">生成器</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="#">关于</a>
+        <a class="nav-link" href="#">关于</a>
       </li>
     </ul>
   </nav>
@@ -53,6 +56,15 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-07-22(v3.0.0-beta.1)
+          <ul>
+            <li>车补票查询页试用</li>
+            <li>测试多语言翻译</li>
+            <li>新增车站：<var>阿克苏</var></li>
+            <li>移除临时车站：<var>郑州客运段</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-07-15(v3.0.0-alpha.1)
           <ul>
             <li>新增车站：<var>嘉善</var></li>
