--- a/rail/tktGener.html
+++ b/rail/tktGener.html
@@ -5,7 +5,7 @@
   <title>运转大数据 | 票机记录生成表</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./js/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/5.13.1/css/fontawesome.min.css">
   <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/5.13.1/css/solid.min.css">
   <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
@@ -22,6 +22,9 @@
     <a class="navbar-brand" href="./tktmach_latest.html">运转大数据</a>
     <span class="navbar-text"> By Kina(木菜)</span>
     <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="./tktmach_latest.html">返回</a>
+      </li>
       <li class="nav-item">
         <a class="nav-link active" href="#">生成器</a>
       </li>
@@ -380,6 +383,19 @@
               <td>
                 <label class="form-check-label">
                   <input type="checkbox" class="form-check-input" id="sel_142">具有该功能
+                </label>
+              </td>
+            </tr>
+            <tr>
+              <th>计次/定期票</th>
+              <td>
+                <label class="form-check-label">
+                  <input type="checkbox" class="form-check-input" id="sel_151">确定
+                </label>
+              </td>
+              <td>
+                <label class="form-check-label">
+                  <input type="checkbox" class="form-check-input" id="sel_152">具有该功能
                 </label>
               </td>
             </tr>
