--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -6,7 +6,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="keyword" content="运转大数据" />
-  <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./js/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/5.13.1/css/fontawesome.min.css">
   <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/5.13.1/css/solid.min.css">
   <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/5.13.1/css/brands.min.css">
@@ -30,6 +30,9 @@
     <a class="navbar-brand" href="./tktmach_latest.html">运转大数据</a>
     <ul class="navbar-nav">
       <li class="nav-item">
+        <a class="nav-link" href="./tktmach_latest.html">返回</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="./tktGener.html">生成器</a>
       </li>
       <li class="nav-item">
@@ -39,7 +42,7 @@
   </nav>
   <div class="container head">
     <p>推荐使用Mdict词典版本，查询更方便。Mdict官方网站：<a href="https://www.mdict.cn/wp/?lang=zh">www.mdict.cn/wp</a></p>
-    <p><a href="./tktMach202106062.mdx"><i class="fas fa-download"></i>下载词典 - 2021 年 06 月 06 日版本</a></p>
+    <p><a href="./tktMach202107012.mdx"><i class="fas fa-download"></i>下载词典 - 2021年07月01日版本</a></p>
     <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="知识共享许可协议" style="border-width:0;" src="./img/ccbync.png" /></a><br />本作品采用<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">知识共享署名-非商业性使用 4.0 国际许可协议</a>进行许可。
   </div>
   <div class="container">
@@ -71,7 +74,7 @@
         <tr><td>4</td><td>杭州东</td><td>30</td><td>35</td></tr>
         <tr><td>5</td><td>兰州</td><td>28</td><td>34</td></tr>
         <tr><td>6</td><td>福州</td><td>26</td><td>32</td></tr>
-        <tr><td>7</td><td>兰州西</td><td>24</td><td>29</td></tr>
+        <tr><td>7</td><td>兰州西</td><td>25</td><td>31</td></tr>
         <tr><td>8</td><td>上海</td><td>22</td><td>23</td></tr>
         <tr><td>9</td><td>天津</td><td>21</td><td>28</td></tr>
         <tr><td>10</td><td>北京西</td><td>19</td><td>26</td></tr>
@@ -108,6 +111,15 @@
       <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.html">ページ</a>へ。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-07-22(v3.0.0-beta.1)
+          <ul>
+            <li>车补票查询页试用</li>
+            <li>测试多语言翻译</li>
+            <li>新增车站：<var>阿克苏</var></li>
+            <li>移除临时车站：<var>郑州客运段</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-07-15(v3.0.0-alpha.1)
           <ul>
             <li>新增车站：<var>嘉善</var></li>
