--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -56,6 +56,16 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-07-31(v3.0.0)
+          <ul>
+            <li>新版本正式发布</li>
+            <li>测试日语翻译上线</li>
+            <li>文案细节配合翻译进行调整</li>
+            <li>新增车站：<var>安康</var>、<var>白河东</var>、<var>白河县</var>、<var>博克图</var>、<var>承德南</var>、<var>谷城</var>、<var>满归</var>、<var>十堰东</var>、<var>图里河</var>、<var>乌尔旗汗</var>、<var>武当山西</var>、<var>香坊</var>、<var>襄州</var>、<var>牙克石</var>、<var>伊图里河</var></li>
+            <li>车站总数达到537个，机器数量1364台。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-07-22(v3.0.0-beta.1)
           <ul>
             <li>车补票查询页试用</li>
