--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -42,7 +42,7 @@
   </nav>
   <div class="container head">
     <p>推荐使用Mdict词典版本，查询更方便。Mdict官方网站：<a href="https://www.mdict.cn/wp/?lang=zh">www.mdict.cn/wp</a></p>
-    <p><a href="./tktMach202107012.mdx"><i class="fas fa-download"></i>下载词典 - 2021年07月01日版本</a></p>
+    <p><a href="./tktMach202107312.mdx"><i class="fas fa-download"></i>下载词典 - 2021年07月31日版本</a></p>
     <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="知识共享许可协议" style="border-width:0;" src="./img/ccbync.png" /></a><br />本作品采用<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">知识共享署名-非商业性使用 4.0 国际许可协议</a>进行许可。
   </div>
   <div class="container">
@@ -69,7 +69,7 @@
       <table class="table">
         <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
         <tr><td>1</td><td>郑州东</td><td>46</td><td>59</td></tr>
-        <tr><td>2</td><td>郑州</td><td>41</td><td>53</td></tr>
+        <tr><td>2</td><td>郑州</td><td>42</td><td>54</td></tr>
         <tr><td>3</td><td>北京南</td><td>32</td><td>34</td></tr>
         <tr><td>4</td><td>杭州东</td><td>30</td><td>35</td></tr>
         <tr><td>5</td><td>兰州</td><td>28</td><td>34</td></tr>
@@ -108,9 +108,19 @@
       <p class="text-muted" lang="en">Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <p>这是简略的更新日志。更详尽的信息可参考<a class="link" href="helpUpdatehist.html">专门页面</a></p>
       <p class="text-muted" lang="en">It's a simplified version. For detailed version you may refer to <a class="link" href="helpUpdatehist.html">this page</a>.</p>
-      <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.html">ページ</a>へ。</p>
+      <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-07-31(v3.0.0)
+          <ul>
+            <li>新版本正式发布</li>
+            <li>测试日语翻译上线</li>
+            <li>文案细节配合翻译进行调整</li>
+            <li>新增车站：<var>安康</var>、<var>白河东</var>、<var>白河县</var>、<var>博克图</var>、<var>承德南</var>、<var>谷城</var>、<var>满归</var>、<var>十堰东</var>、<var>图里河</var>、<var>乌尔旗汗</var>、<var>武当山西</var>、<var>香坊</var>、<var>襄州</var>、<var>牙克石</var>、<var>伊图里河</var></li>
+            <li>车站总数达到537个，机器数量1364台。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-07-22(v3.0.0-beta.1)
           <ul>
             <li>车补票查询页试用</li>
