--- a/index.html
+++ b/index.html
@@ -49,34 +49,26 @@
             <p>Contents may be written in English, 中文(Chinese), 日本語(Japanese) or sometimes Dansk (Danish).</p>
 
             <blockquote>
-              <p><a href="http://clzls.blog.163.com">163 blog 网易博客 (Chinese only. CLOSED and no updates since 2018)</a></p>
-              <p><a href="http://clzls00.isitestar.vip/">iSiteStar blog (Multiple language but not complete)</a></p>
               <p>Tencent QQ: 286_280_2117</p>
-              <p>Chats via <a href="https://keybase.io">Keybase</a> is also accepted.</p>
+              <p>Chats via <a href="https://keybase.io/firetimer/chat">Keybase</a> is also accepted.</p>
               <p>Mail: myad#live.cn (REPLACE # WITH @)</p>
             </blockquote>
 
-            <p><a href="https://my.flightradar24.com/firetimer"><img src="https://banners-my.flightradar24.com/firetimer.png" alt="My Flightdiary.net profile" /></a></p>
+            <p><a href="https://my.flightradar24.com/firetimer">
+              <img src="https://banners-my.flightradar24.com/firetimer.png" alt="My Flightdiary.net profile" />
+            </a></p>
 
             <h3>
               <a id="available-contents" class="anchor" href="#available-contents" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Available Contents
             </h3>
 
-            <p xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#" class="license-text">When not declared explicitly, all these documents are licensed under CC BY-NC 4.0<a href="https://creativecommons.org/licenses/by-nc/4.0"><img style="height:22px!important;margin-left: 3px;vertical-align:text-bottom;" src="https://search.creativecommons.org/static/img/cc_icon.svg" /><img  style="height:22px!important;margin-left: 3px;vertical-align:text-bottom;" src="https://search.creativecommons.org/static/img/cc-by_icon.svg" /><img  style="height:22px!important;margin-left: 3px;vertical-align:text-bottom;" src="https://search.creativecommons.org/static/img/cc-nc_icon.svg" /></a></p>
-            <p><a href="/rail/tktmach_latest.html">中国铁路售票机综合统计(Chinese only)</a></p>
+            <p xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#" class="license-text">When not declared explicitly, all these documents are licensed under CC BY-NC 4.0<a href="https://creativecommons.org/licenses/by-nc/4.0">
+              <img style="height:22px!important;margin-left: 3px;vertical-align:text-bottom;" src="https://search.creativecommons.org/static/img/cc_icon.svg" />
+              <img  style="height:22px!important;margin-left: 3px;vertical-align:text-bottom;" src="https://search.creativecommons.org/static/img/cc-by_icon.svg" />
+              <img  style="height:22px!important;margin-left: 3px;vertical-align:text-bottom;" src="https://search.creativecommons.org/static/img/cc-nc_icon.svg" />
+            </a></p>
+            <p><a href="/rail/tktmach_latest.html">中国铁路售票机综合统计(Multilanguage)</a></p>
             <p><a href="/rail/票机综合统计202005101.mdx">票机综合统计 Mdict 下载(Chinese only)</a></p>
-            
-            <h3>
-              <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors
-            </h3>
-
-            <p>Currently, only me (<a href="https://github.com/clzls" class="user-mention">@clzls</a>) has contributed to this site.</p>
-
-            <h3>
-              <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact
-            </h3>
-
-            <p>Having trouble with Pages? <a href="https://github.com/contact">Contact support</a> and we’ll help you sort it out.</p>
           </article>
         </div>
       </div>
