--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -56,6 +56,14 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-08-07(v3.0.1)
+          <ul>
+            <li>测试英语翻译上线</li>
+            <li>文案配合翻译进行调整</li>
+            <li>添加对售票量的估计</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-07-31(v3.0.0)
           <ul>
             <li>新版本正式发布</li>
