--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -5,7 +5,7 @@
   <title>運転マスデータ ｜ 変更履歴</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="keyword" content="运转大数据,運転マスデータ" />
+  <meta name="keyword" content="运转大数据, 運転マスデータ, Yùnzhuǎn Dà-shùjù, Big Data for Train Travel in China" />
   <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/5.13.1/css/fontawesome.min.css">
   <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/5.13.1/css/solid.min.css">
@@ -51,56 +51,64 @@
     <br/>
     <article class="container">
       <h3>変更履歴</h3>
-      <h4 class="text-muted" lang="ja">Update log</h4>
-      <p>这是较为完整的更新日志。内容增加、版式微调等常规更新将不再被列出，敬请注意。</p>
+      <h4 class="text-muted" lang="en">Update log</h4>
+      <p>これは完全な変更履歴です。内容增加、版式微调等常规更新将不再被列出，敬请注意。</p>
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-08-07(v3.0.1)
+          <ul>
+            <li>新しい英語翻訳</li>
+            <li>文案を翻訳易いになる為に調整</li>
+            <li>券売量を追加</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-07-31(v3.0.0)
           <ul>
-            <li>新版、正式的に発表した</li>
+            <li>新版、正式的に発表</li>
             <li>新しい日本語翻訳</li>
-            <li>文案细节配合翻译进行调整</li>
+            <li>文案を翻訳易いになる為に調整</li>
             <li>新しい駅：<var>安康</var>、<var>白河東</var>、<var>白河県</var>、<var>博克図</var>、<var>承德南</var>、<var>谷城</var>、<var>満帰</var>、<var>十堰東</var>、<var>図里河</var>、<var>烏尔旗汗</var>、<var>武当山西</var>、<var>香坊</var>、<var>襄州</var>、<var>牙克石</var>、<var>伊図里河</var></li>
-            <li>车站总数达到537个，机器数量1364台。</li>
+            <li>記録した駅は537個、機器は1364個。</li>
           </ul>
         </li>
         <li class="list-group-item">
           2021-07-22(v3.0.0-beta.1)
           <ul>
-            <li>车补票查询页试用</li>
-            <li>测试多语言翻译</li>
-            <li>新しい駅：<var>阿克苏</var></li>
-            <li>仮想駅を消す：<var>鄭州客運段</var></li>
+            <li>「車補票」問い合わせ頁を試用</li>
+            <li>多言語（マルチランゲージ）翻訳をテストする。</li>
+            <li>新しい駅：<var>阿克蘇</var></li>
+            <li>仮想駅を消します：<var>鄭州客運段</var></li>
           </ul>
         </li>
         <li class="list-group-item">
           2021-07-15(v3.0.0-alpha.1)
           <ul>
             <li>新しい駅：<var>嘉善</var></li>
-            <li>增加对来源的标识。</li>
-            <li>样式更改为本地资源，便于保存。</li>
+            <li>出所（オリジン）を表記</li>
+            <li>スタイル‐シート(CSS)等、ローカル化にする。</li>
           </ul>
         </li>
         <li class="list-group-item">
           2021-07-08(v3.0.0-alpha)
           <ul>
-            <li>新しい駅：<var>大連</var>、<var>合肥北城</var>、<var>林芝</var>、<var>水家湖</var>、<var>台州西</var>、<var>太仓</var>、<var>天祝</var>、<var>武威南</var>、<var>咸阳西</var>、<var>永登</var></li>
+            <li>新しい駅：<var>大連</var>、<var>合肥北城</var>、<var>林芝</var>、<var>水家湖</var>、<var>台州西</var>、<var>太倉</var>、<var>天祝</var>、<var>武威南</var>、<var>咸阳西</var>、<var>永登</var></li>
             <li>新しい仮想駅：<var>鄭州客運段</var></li>
             <li>新しい駅組：<var>合福高速線(線路)</var>、<var>金温貨線(線路)</var>、<var>金温線(線路)</var></li>
             <li>勋章展示、车站客貨運标志功能</li>
-            <li>车补票试運転。</li>
+            <li>「車補票」問い合わせ頁を試用</li>
           </ul>
         </li>
         <li class="list-group-item">
-          2021-07-01(v2.3.14) 百年生日快乐！
+          2021-07-01(v2.3.14) 百年、お誕生日おめでとう！
           <ul>
             <li>修改了部分标签的格式。</li>
             <li>维护了部分车站更名。</li>
           </ul>
         </li>
         <li class="list-group-item">
-          2021-06-20(v2.3.13)(发布于2021-06-24)
+          2021-06-20(v2.3.13)(2021-06-24 に発表)
           <ul>
             <li>毕业季，更新频率略有下调。</li>
             <li>修改了部分标签的格式。</li>
@@ -126,7 +134,7 @@
         <li class="list-group-item">
           2021-05-27(v2.3.10)
           <ul>
-            <li>新しい駅：<var>贺胜桥东</var></li>
+            <li>新しい駅：<var>贺胜桥東</var></li>
             <li>车站总数达到500个。</li>
           </ul>
         </li>
@@ -134,14 +142,14 @@
           2021-05-20(v2.3.9)
           <ul>
             <li>毕业季，更新频率略有下调。</li>
-            <li>新しい駅：<var>霸州</var>、<var>滨海港</var>、<var>昌平</var>、<var>长春</var>、<var>长春西</var>、<var>常州</var>、<var>德惠</var>、<var>德州</var>、<var>阜宁</var>、<var>阜宁南</var>、<var>海安</var>、<var>蓟州北</var>、<var>建湖</var>、<var>龙嘉</var>、<var>马鞍山</var>、<var>蓬莱市</var>、<var>如东</var>、<var>射阳</var>、<var>四平</var>、<var>四平东</var>、<var>泰州</var>、<var>盐城</var>、<var>盐城大丰</var></li>
+            <li>新しい駅：<var>霸州</var>、<var>濱海港</var>、<var>昌平</var>、<var>長春</var>、<var>長春西</var>、<var>常州</var>、<var>德惠</var>、<var>德州</var>、<var>阜宁</var>、<var>阜宁南</var>、<var>海安</var>、<var>蓟州北</var>、<var>建湖</var>、<var>龙嘉</var>、<var>馬鞍山</var>、<var>蓬莱市</var>、<var>如東</var>、<var>射阳</var>、<var>四平</var>、<var>四平東</var>、<var>泰州</var>、<var>盐城</var>、<var>盐城大丰</var></li>
             <li>车站总数达到499个，机器数量1263台。</li>
           </ul>
         </li>
         <li class="list-group-item">
           2021-05-10(v2.3.8)
           <ul>
-            <li>新しい駅：<var>沧州西</var>、<var>东台</var>、<var>鄂州</var>、<var>阜阳西</var>、<var>十渡</var>、<var>苏州北</var></li>
+            <li>新しい駅：<var>沧州西</var>、<var>東台</var>、<var>鄂州</var>、<var>阜阳西</var>、<var>十渡</var>、<var>苏州北</var></li>
           </ul>
         </li>
         <li class="list-group-item">
@@ -154,8 +162,8 @@
         <li class="list-group-item">
           2021-04-26(v2.3.6)
           <ul>
-            <li>新しい駅：<var>大冶北</var>、<var>华山北</var></li>
-            <li>新しい駅組：<var>宝成、成渝线(线路)</var>、<var>昌福线(线路)</var>、<var>成渝高速线(线路)</var>、<var>抚顺线(线路)</var>、<var>广九线(线路)</var>、<var>广深港高速线(线路)</var>、<var>杭深线(线路)</var>、<var>辽宁沈阳(城市)</var>、<var>沈丹客专线(线路)</var></li>
+            <li>新しい駅：<var>大冶北</var>、<var>華山北</var></li>
+            <li>新しい駅組：<var>宝成、成渝線(線路)</var>、<var>昌福線(線路)</var>、<var>成渝高速線(線路)</var>、<var>抚顺線(線路)</var>、<var>广九線(線路)</var>、<var>广深港高速線(線路)</var>、<var>杭深線(線路)</var>、<var>辽宁沈阳(城市)</var>、<var>沈丹客专線(線路)</var></li>
           </ul>
         </li>
         <li class="list-group-item">
@@ -165,7 +173,7 @@
               新しい駅：<var>河源</var>、<var>虎门</var>、<var>淮北</var>、<var>漳浦</var>
             </li>
             <li>
-              新しい駅組：<var>衢宁线(线路)</var>
+              新しい駅組：<var>衢宁線(線路)</var>
             </li>
             <li>
               车站联合体新增了一些额外数据。
@@ -184,7 +192,7 @@
           2021-04-05(v2.3.3)
           <ul>
             <li>
-              新しい駅：<var>八达岭长城</var>、<var>海拉尔</var>
+              新しい駅：<var>八达岭長城</var>、<var>海拉尔</var>
             </li>
           </ul>
         </li>
@@ -192,10 +200,10 @@
           2021-03-29(v2.3.2)
           <ul>
             <li>
-              新しい駅：<var>吉首</var>、<var>昆山</var>、<var>良乡</var>、<var>麻城</var>、<var>麻城北</var>、<var>沙城</var>、<var>孝感东</var>、<var>延庆</var>
+              新しい駅：<var>吉首</var>、<var>昆山</var>、<var>良乡</var>、<var>麻城</var>、<var>麻城北</var>、<var>沙城</var>、<var>孝感東</var>、<var>延庆</var>
             </li>
             <li>
-              新しい駅組：<var>京津城际线(线路)</var>
+              新しい駅組：<var>京津城际線(線路)</var>
             </li>
             <li>
               票机功能信息进行少许调整：可能不支持的功能被忽略
@@ -206,10 +214,10 @@
           2021-03-22(v2.3.1)
           <ul>
             <li>
-              新しい駅：<var>昌平北</var>、<var>大理</var>、<var>峨眉</var>、<var>峨眉山</var>、<var>淮安东</var>、<var>康庄</var>、<var>连云港东</var>、<var>密云北</var>、<var>石门县北</var>、<var>顺义西</var>、<var>燕岗</var>
+              新しい駅：<var>昌平北</var>、<var>大理</var>、<var>峨眉</var>、<var>峨眉山</var>、<var>淮安東</var>、<var>康庄</var>、<var>连云港東</var>、<var>密云北</var>、<var>石门县北</var>、<var>顺义西</var>、<var>燕岗</var>
             </li>
             <li>
-              修复：郑焦城际显示错误
+              修复：鄭焦城际显示错误
             </li>
           </ul>
         </li>
@@ -222,45 +230,45 @@
           </ul>
         </li>
         <li class="list-group-item">
-          2021-03-08(v2.2.2) 妇女节快乐！
+          2021-03-08(v2.2.2) 婦女節快乐！
           <ul>
             <li lang="en">Happy Women's Day!</li>
-            <li>新しい駅：<var>成都西</var>、<var>福利区</var>、<var>哈尔滨西</var>、<var>汉中</var>、<var>连云港</var>、<var>渑池南</var>、<var>彭山北</var>、<var>郫县西</var>、<var>深圳机场</var>、<var>雅安</var></li>
-            <li>维护了车站联合体的引导信息。新增的车站联合体有：<var>福平线(线路)</var>、<var>甘肃兰州(城市)</var>、<var>京张高速线(线路)</var></li>
+            <li>新しい駅：成都西、福利区、哈尔濱西、漢中、连云港、渑池南、彭山北、郫县西、深圳機場、雅安</li>
+            <li>駅組案内を作成。新規作成した駅組は：福平線(線路)、甘肃兰州(城市)、京張高速線(線路)</li>
             <li>优化代码，减少了冗余数据。</li>
           </ul>
         </li>
         <li class="list-group-item">
           2021-03-02(Version 2021-02-28, v2.2.1):
-          <ul><li>新しい駅：<var>大港南</var>、<var>当阳</var>、<var>阜阳</var></li></ul>
+          <ul><li>新しい駅：大港南、当阳、阜阳</li></ul>
         </li>
         <li class="list-group-item">
           2021-02-18(v2.2.0pre OR v2.1.3):
           <ul>
-            <li>新しい駅：<var>北京朝阳</var>、<var>长治东</var>、<var>丹阳</var>、<var>晋城</var>、<var>晋城东</var>、<var>汤逊湖</var>、<var>铜陵</var>、<var>西华</var>、<var>鄢陵</var>。出于维护历史记录的需要新增的有：<var>清华园</var></li>
-            <li>维护了车站联合体的引导信息。首批引入的车站联合体有：<var>北京(城市)</var>、<var>北京(其他车站)</var>、<var>重庆(城市)</var>、<var>福建福州(城市)</var>、<var>河南郑州(城市)</var>、<var>河南郑州(同城站)</var>、<var>湖北武汉(城市)</var>、<var>湖北武汉(同城站)</var>、<var>上海(城市)</var>。</li>
-            <li>对车站列表进行重排，尽量按照字典序排列。</li>
-            <li>于 2021-02-14 达成收录 1000 个位置的成就！</li>
-            <li>达成收录 416 个车站的成就！</li>
+            <li>新しい駅：北京朝阳、長治東、丹阳、晋城、晋城東、汤逊湖、銅陵、西華、鄢陵。歴史記録を維持する為に新しい駅記録を作成：清華园</li>
+            <li>駅組案内を作成。新規作成した駅組は：北京(城市)、北京(其他車站)、重庆(城市)、福建福州(城市)、河南鄭州(城市)、河南鄭州(同城站)、湖北武漢(城市)、湖北武漢(同城站)、上海(城市)。</li>
+            <li>駅リストを再排、辞書序に排列。</li>
+            <li>「千機収録」、2021-02-14 に達成！</li>
+            <li>「416 駅収録」達成！</li>
           </ul>
         </li>
         <li class="list-group-item">
-          2021-02-11(v2.1.2) 春节特别版
+          2021-02-11(v2.1.2) 春節特别版
           <ul>
             <li lang="en">Happy Chinese New Year / Lunar New Year!</li>
-            <li>新しい駅：<var>仙林</var>、<var>马鞍山东</var>。出于维护历史记录的需要新增的有：<var>武夷山东</var></li>
-            <li>维护了<var>长乐</var>、<var>宁波</var>与<var>福州南</var>的引导信息。</li>
+            <li>新しい駅：仙林、馬鞍山東。歴史記録を維持する為に新しい駅記録を作成：武夷山東</li>
+            <li>長楽、宁波及び福州南の案内を維持。</li>
           </ul>
         </li>
         <li class="list-group-item">
           2021-02-01(v2.1.2):
           <ul>
-            <li>新しい駅：<var>三间房</var>、<var>乌伊岭</var>、<var>伊春</var>、<var>佳木斯</var>、<var>南岔</var>、<var>友好</var>、<var>周家</var>、<var>哈尔滨</var>、<var>哈尔滨东</var>、<var>奎屯</var>、<var>日喀则</var>、<var>朗乡</var>、<var>朱砂古镇</var>、<var>梧州</var>、<var>汤池</var>、<var>浩良河</var>、<var>深圳西</var>、<var>绥化</var>、<var>美溪</var>、<var>西安南</var>、<var>西林</var>、<var>长乐</var>、<var>香兰</var>、<var>齐齐哈尔</var>、<var>齐齐哈尔南</var></li>
-            <li>新しい駅资料与车站历史栏目。</li>
+            <li>新しい駅：三间房、乌伊岭、伊春、佳木斯、南岔、友好、周家、哈尔濱、哈尔濱東、奎屯、日喀则、朗乡、朱砂古镇、梧州、汤池、浩良河、深圳西、绥化、美溪、西安南、西林、長楽、香兰、斉斉哈尔、斉斉哈尔南</li>
+            <li>新しい駅資料と駅歴史欄。</li>
           </ul>
         </li>
         <li class="list-group-item">
-          2021-01-23(v2.1.1) 生日特别版:
+          2021-01-23(v2.1.1) お誕生日特别版:
           <ul>
             <li>新しい駅：<var>郎溪南</var></li>
             <li>现在几乎所有车站信息都可以带图片了。</li>
@@ -284,7 +292,7 @@
             <li>版式调整，浏览器互动优化。条目版成为默认项。</li>
             <li>车站基础信息聚合显示。加入少量拼音数据。</li>
             <li lang="en">Pinyin information for non Mandarin users. Use this site with extra care and DO NOT rely on it when planning a travel and / or traveling.</li>
-            <li lang="ja">中国語<ruby>拼音<rp>(</rp><rt>ピンイン</rt><rp>)</rp></ruby>情報、ご利用くださいませ。掲載した情報（間違い等）によって引き起こされた（直接的、間接的を問わず）損害に付いて、一切責任を負いません。</li>
+            <li>中国語<ruby>拼音<rp>(</rp><rt>ピンイン</rt><rp>)</rp></ruby>情報、ご利用くださいませ。掲載した情報（間違い等）によって引き起こされた（直接的、間接的を問わず）損害に付いて、一切責任を負いません。</li>
           </ul>
         </li>
         <li class="list-group-item">
@@ -304,7 +312,7 @@
     </div>
   </div>
   <footer class="container">
-    <small class="text-muted">文中各商标为对应公司的资产。</small>
+    <small class="text-muted">文中各商标为对应公司的資产。</small>
   </footer>
 </body>
 
