--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -71,7 +71,7 @@
         <tr><td>1</td><td>郑州东</td><td>46</td><td>59</td></tr>
         <tr><td>2</td><td>郑州</td><td>42</td><td>54</td></tr>
         <tr><td>3</td><td>北京南</td><td>32</td><td>34</td></tr>
-        <tr><td>4</td><td>杭州东</td><td>30</td><td>35</td></tr>
+        <tr><td>4</td><td>杭州东</td><td>31</td><td>36</td></tr>
         <tr><td>5</td><td>兰州</td><td>28</td><td>34</td></tr>
         <tr><td>6</td><td>福州</td><td>26</td><td>32</td></tr>
         <tr><td>7</td><td>兰州西</td><td>25</td><td>31</td></tr>
@@ -111,6 +111,14 @@
       <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-08-07(v3.0.1)
+          <ul>
+            <li>测试英语翻译上线</li>
+            <li>文案配合翻译进行调整</li>
+            <li>添加对售票量的估计</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-07-31(v3.0.0)
           <ul>
             <li>新版本正式发布</li>
