--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -56,6 +56,15 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-08-14(v3.0.2)
+          <ul>
+            <li>请注意：从下个版本以后各小改版将不再保留历史记录，同时文件名将更新，请有需要的用户前往项目仓库查询。</li>
+            <li>文案配合翻译进行调整</li>
+            <li>新增车站：<var>承德</var>、<var>青州市</var>、<var>商丘南</var>、<var>纸坊东</var></li>
+            <li>新增车站联合体：<var>峰福线(线路)</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-08-07(v3.0.1)
           <ul>
             <li>测试英语翻译上线</li>
