--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -56,6 +56,14 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-08-14(v3.0.2)
+          <ul>
+            <li>文案を翻訳易いになる為に調整</li>
+            <li>新しい駅：<var>承徳</var>、<var>青州市</var>、<var>商丘南</var>、<var>纸坊东</var></li>
+            <li>新しい駅組：<var>峰福線(線路)</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-08-07(v3.0.1)
           <ul>
             <li>新しい英語翻訳</li>
@@ -69,7 +77,7 @@
             <li>新版、正式的に発表</li>
             <li>新しい日本語翻訳</li>
             <li>文案を翻訳易いになる為に調整</li>
-            <li>新しい駅：<var>安康</var>、<var>白河東</var>、<var>白河県</var>、<var>博克図</var>、<var>承德南</var>、<var>谷城</var>、<var>満帰</var>、<var>十堰東</var>、<var>図里河</var>、<var>烏尔旗汗</var>、<var>武当山西</var>、<var>香坊</var>、<var>襄州</var>、<var>牙克石</var>、<var>伊図里河</var></li>
+            <li>新しい駅：<var>安康</var>、<var>白河東</var>、<var>白河県</var>、<var>博克図</var>、<var>承徳南</var>、<var>谷城</var>、<var>満帰</var>、<var>十堰東</var>、<var>図里河</var>、<var>烏尔旗汗</var>、<var>武当山西</var>、<var>香坊</var>、<var>襄州</var>、<var>牙克石</var>、<var>伊図里河</var></li>
             <li>記録した駅は537個、機器は1364個。</li>
           </ul>
         </li>
@@ -142,7 +150,7 @@
           2021-05-20(v2.3.9)
           <ul>
             <li>毕业季，更新频率略有下调。</li>
-            <li>新しい駅：<var>霸州</var>、<var>濱海港</var>、<var>昌平</var>、<var>長春</var>、<var>長春西</var>、<var>常州</var>、<var>德惠</var>、<var>德州</var>、<var>阜宁</var>、<var>阜宁南</var>、<var>海安</var>、<var>蓟州北</var>、<var>建湖</var>、<var>龙嘉</var>、<var>馬鞍山</var>、<var>蓬莱市</var>、<var>如東</var>、<var>射阳</var>、<var>四平</var>、<var>四平東</var>、<var>泰州</var>、<var>盐城</var>、<var>盐城大丰</var></li>
+            <li>新しい駅：<var>霸州</var>、<var>濱海港</var>、<var>昌平</var>、<var>長春</var>、<var>長春西</var>、<var>常州</var>、<var>徳惠</var>、<var>徳州</var>、<var>阜宁</var>、<var>阜宁南</var>、<var>海安</var>、<var>蓟州北</var>、<var>建湖</var>、<var>龙嘉</var>、<var>馬鞍山</var>、<var>蓬莱市</var>、<var>如東</var>、<var>射阳</var>、<var>四平</var>、<var>四平東</var>、<var>泰州</var>、<var>盐城</var>、<var>盐城大丰</var></li>
             <li>车站总数达到499个，机器数量1263台。</li>
           </ul>
         </li>
