--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -69,7 +69,7 @@
       <table class="table">
         <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
         <tr><td>1</td><td>郑州东</td><td>46</td><td>59</td></tr>
-        <tr><td>2</td><td>郑州</td><td>42</td><td>54</td></tr>
+        <tr><td>2</td><td>郑州</td><td>43</td><td>55</td></tr>
         <tr><td>3</td><td>北京南</td><td>32</td><td>34</td></tr>
         <tr><td>4</td><td>杭州东</td><td>31</td><td>36</td></tr>
         <tr><td>5</td><td>兰州</td><td>28</td><td>34</td></tr>
@@ -111,6 +111,15 @@
       <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-08-14(v3.0.2)
+          <ul>
+            <li>请注意：从下个版本以后各小改版将不再保留历史记录，同时文件名将更新，请有需要的用户前往项目仓库查询。</li>
+            <li>文案配合翻译进行调整</li>
+            <li>新增车站：<var>承德</var>、<var>青州市</var>、<var>商丘南</var>、<var>纸坊东</var></li>
+            <li>新增车站联合体：<var>峰福线(线路)</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-08-07(v3.0.1)
           <ul>
             <li>测试英语翻译上线</li>
