--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -39,8 +39,8 @@
   </div>
   <div class="container">
     项目网址：
-    <a href="https://kinarail.gitee.io/ticket_stat/tktmach_latest.html">
-      https://kinarail.gitee.io/ticket_stat/tktmach_latest.html
+    <a href="https://clzls.github.io/rail/tktmach_latest.html">
+      https://clzls.github.io/rail/tktmach_latest.html
     </a>
   </div>
   <div class="container">
@@ -56,6 +56,13 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-08-21(v3.0.3)
+          <ul>
+            <li>请注意：各小改版将不再保留历史记录，同时文件名已更新，请有需要的用户前往项目仓库查询。</li>
+            <li>新增车站：<var>白城</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-08-14(v3.0.2)
           <ul>
             <li>请注意：从下个版本以后各小改版将不再保留历史记录，同时文件名将更新，请有需要的用户前往项目仓库查询。</li>
