--- a/rail/tktGener.html
+++ b/rail/tktGener.html
@@ -36,8 +36,8 @@
   <div class="container">
     <p></p>
     项目网址：
-    <a href="https://kinarail.gitee.io/ticket_stat/tktmach_latest.html" class="promo">
-      https://kinarail.gitee.io/ticket_stat/tktmach_latest.html
+    <a href="https://clzls.github.io/rail/tktmach_latest.html" class="promo">
+      https://clzls.github.io/rail/tktmach_latest.html
     </a>
     <p></p>
     <div class="container">
