--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -39,8 +39,8 @@
   </div>
   <div class="container">
     项目网址：
-    <a href="https://kinarail.gitee.io/ticket_stat/tktmach_latest.html">
-      https://kinarail.gitee.io/ticket_stat/tktmach_latest.html
+    <a href="https://clzls.github.io/rail/tktmach_latest.html">
+      https://clzls.github.io/rail/tktmach_latest.html
     </a>
   </div>
   <div class="container">
@@ -56,6 +56,13 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-08-21(v3.0.3)
+          <ul>
+            <li>ご注意：各ファイルの名前を更新していた。</li>
+            <li>新しい駅：<var>白城</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-08-14(v3.0.2)
           <ul>
             <li>文案を翻訳易いになる為に調整</li>
