--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -47,8 +47,8 @@
   </div>
   <div class="container">
     项目网址：
-    <a href="https://kinarail.gitee.io/ticket_stat/tktmach_latest.html" class="promo">
-      kinarail.gitee.io/ticket_stat/tktmach_latest.html
+    <a href="https://clzls.github.io/rail/tktmach_latest.html" class="promo">
+      clzls.github.io/rail/tktmach_latest.html
     </a>
     <p></p>
     票号前十位包含以下信息：
@@ -72,12 +72,12 @@
         <tr><td>2</td><td>郑州</td><td>43</td><td>55</td></tr>
         <tr><td>3</td><td>北京南</td><td>32</td><td>34</td></tr>
         <tr><td>4</td><td>杭州东</td><td>31</td><td>36</td></tr>
-        <tr><td>5</td><td>兰州</td><td>28</td><td>34</td></tr>
-        <tr><td>6</td><td>福州</td><td>26</td><td>32</td></tr>
+        <tr><td>5</td><td>兰州</td><td>28</td><td>35</td></tr>
+        <tr><td>6</td><td>福州</td><td>27</td><td>33</td></tr>
         <tr><td>7</td><td>兰州西</td><td>25</td><td>31</td></tr>
-        <tr><td>8</td><td>上海</td><td>22</td><td>23</td></tr>
-        <tr><td>9</td><td>天津</td><td>21</td><td>28</td></tr>
-        <tr><td>10</td><td>北京西</td><td>19</td><td>26</td></tr>
+        <tr><td>8</td><td>长春</td><td>24</td><td>26</td></tr>
+        <tr><td>9</td><td>上海</td><td>22</td><td>23</td></tr>
+        <tr><td>10</td><td>天津</td><td>21</td><td>28</td></tr>
       </table>
     </div>
     <div class="container">
@@ -111,6 +111,13 @@
       <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-08-21(v3.0.3)
+          <ul>
+            <li>请注意：各小改版将不再保留历史记录，同时文件名已更新，请有需要的用户前往项目仓库查询。</li>
+            <li>新增车站：<var>白城</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-08-14(v3.0.2)
           <ul>
             <li>请注意：从下个版本以后各小改版将不再保留历史记录，同时文件名将更新，请有需要的用户前往项目仓库查询。</li>
