--- a/rail/tktMach202103152.html
+++ b/rail/tktMach202103152.html
@@ -37,11 +37,11 @@
   </div>
   <div class="container">
     <p>
-      <span lang="zh">本网站的历史回溯功能缺失。如需访问历史数据，请访问项目网址或联系管理员：</span>
-      <span lang="en" class="text-muted">The history data is missing in this site. For more historical data, please refer to the site below or contact the authors:</span>
+      <span lang="zh">本网站的历史回溯功能缺失。如需访问历史数据，请访问项目仓库或联系管理员：</span>
+      <span lang="en" class="text-muted">The history data is missing in this site. For more historical data, please refer to the repo of this site or contact the authors:</span>
     </p>
-    <a href="https://kinarail.gitee.io/ticket_stat/tktmach_latest.html">
-      https://kinarail.gitee.io/ticket_stat/tktmach_latest.html
+    <a href="https://clzls.github.io/rail/tktmach_latest.html">
+      https://clzls.github.io/rail/tktmach_latest.html
     </a>
   </div>
 </body>
