--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -42,7 +42,7 @@
   </nav>
   <div class="container head">
     <p>推荐使用Mdict词典版本，查询更方便。Mdict官方网站：<a href="https://www.mdict.cn/wp/?lang=zh">www.mdict.cn/wp</a></p>
-    <p><a href="./tktMach202107312.mdx"><i class="fas fa-download"></i>下载词典 - 2021年07月31日版本</a></p>
+    <p><a href="./tktMach2021a2.mdx"><i class="fas fa-download"></i>下载词典 - 2021年08月30日版本</a></p>
     <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="知识共享许可协议" style="border-width:0;" src="./img/ccbync.png" /></a><br />本作品采用<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">知识共享署名-非商业性使用 4.0 国际许可协议</a>进行许可。
   </div>
   <div class="container">
@@ -70,12 +70,12 @@
         <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
         <tr><td>1</td><td>郑州东</td><td>46</td><td>59</td></tr>
         <tr><td>2</td><td>郑州</td><td>43</td><td>55</td></tr>
-        <tr><td>3</td><td>北京南</td><td>32</td><td>34</td></tr>
-        <tr><td>4</td><td>杭州东</td><td>31</td><td>36</td></tr>
-        <tr><td>5</td><td>兰州</td><td>28</td><td>35</td></tr>
-        <tr><td>6</td><td>福州</td><td>27</td><td>33</td></tr>
-        <tr><td>7</td><td>兰州西</td><td>25</td><td>31</td></tr>
-        <tr><td>8</td><td>长春</td><td>24</td><td>26</td></tr>
+        <tr><td>3</td><td>长春</td><td>38</td><td>40</td></tr>
+        <tr><td>4</td><td>北京南</td><td>32</td><td>34</td></tr>
+        <tr><td>5</td><td>杭州东</td><td>31</td><td>36</td></tr>
+        <tr><td>6</td><td>兰州</td><td>28</td><td>35</td></tr>
+        <tr><td>7</td><td>福州</td><td>27</td><td>33</td></tr>
+        <tr><td>8</td><td>兰州西</td><td>25</td><td>31</td></tr>
         <tr><td>9</td><td>上海</td><td>22</td><td>23</td></tr>
         <tr><td>10</td><td>天津</td><td>21</td><td>28</td></tr>
       </table>
@@ -111,27 +111,9 @@
       <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
-          2021-08-21(v3.0.3)
+          2021-08-30(v3.0.4)
           <ul>
-            <li>请注意：各小改版将不再保留历史记录，同时文件名已更新，请有需要的用户前往项目仓库查询。</li>
-            <li>新增车站：<var>白城</var></li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          2021-08-14(v3.0.2)
-          <ul>
-            <li>请注意：从下个版本以后各小改版将不再保留历史记录，同时文件名将更新，请有需要的用户前往项目仓库查询。</li>
-            <li>文案配合翻译进行调整</li>
-            <li>新增车站：<var>承德</var>、<var>青州市</var>、<var>商丘南</var>、<var>纸坊东</var></li>
-            <li>新增车站联合体：<var>峰福线(线路)</var></li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          2021-08-07(v3.0.1)
-          <ul>
-            <li>测试英语翻译上线</li>
-            <li>文案配合翻译进行调整</li>
-            <li>添加对售票量的估计</li>
+            <li>新增车站：<var>农安</var>、<var>平旺</var></li>
           </ul>
         </li>
         <li class="list-group-item">
