--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -56,6 +56,12 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-08-30(v3.0.4)
+          <ul>
+            <li>新しい駅：<var>农安</var>、<var>平旺</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-08-21(v3.0.3)
           <ul>
             <li>ご注意：各ファイルの名前を更新していた。</li>
