--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -73,7 +73,7 @@
         <tr><td>3</td><td>长春</td><td>38</td><td>40</td></tr>
         <tr><td>4</td><td>北京南</td><td>32</td><td>34</td></tr>
         <tr><td>5</td><td>杭州东</td><td>31</td><td>36</td></tr>
-        <tr><td>6</td><td>兰州</td><td>28</td><td>35</td></tr>
+        <tr><td>6</td><td>兰州</td><td>29</td><td>36</td></tr>
         <tr><td>7</td><td>福州</td><td>27</td><td>33</td></tr>
         <tr><td>8</td><td>兰州西</td><td>25</td><td>31</td></tr>
         <tr><td>9</td><td>上海</td><td>22</td><td>23</td></tr>
@@ -111,6 +111,12 @@
       <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-09-06(v3.0.5)
+          <ul>
+            <li>更改版本为<code>2021b</code></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-08-30(v3.0.4)
           <ul>
             <li>新增车站：<var>农安</var>、<var>平旺</var></li>
