--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -56,6 +56,12 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-09-06(v3.0.5)
+          <ul>
+            <li>更改版本为<code>2021b</code></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-08-30(v3.0.4)
           <ul>
             <li>新增车站：<var>农安</var>、<var>平旺</var></li>
